--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
                         input.classList.add(invalidInputClass);
                         formValid = false;
                     } else if (!input) { 
-                        console.warning(`Element ${input} is not found in the document.`);
+                        console.warn(`Element ${input} is not found in the document.`);
                     }
                 });
             
