--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                             </div>
                             <img src="banner.png" alt="Banner Image" class="img-fluid" />
                             &nbsp
-                            <p style="color: #a63a50;"><strong>Instructions:</strong></p>
+                            <p style="color: #4b0082;"><strong>Instructions:</strong></p>
                             <ul class="bullet-points">
                                 <li>Participation fee is <strong>Rs.600/- per flat.</strong></li>
                                 <li>Fill a <strong>separate form for each participant</strong> from your flat.</li>
@@ -68,7 +68,7 @@
                         <section class="mb-4">
                             <div class="section-header">
                                 <h2>Participant Information</h2>
-                                <p style="color: #a63a50;"><strong>NOTE:</strong> Fill a separate form for each participant from your flat</p>
+                                <p style="color: #4b0082;"><strong>NOTE:</strong> Fill a separate form for each participant from your flat</p>
                             </div>
                             <form id="registrationForm">
                                 <!-- Email -->
@@ -196,7 +196,7 @@
                         <section class="mb-4">
                             <div class="section-header">
                                 <h2>Book Food Stalls</h2>
-                                <p style="color: #a63a50;"><strong>NOTE:</strong> Booking is on first come first serve basis</p>
+                                <p style="color: #4b0082;"><strong>NOTE:</strong> Booking is on first come first serve basis</p>
                             </div>
                             <p>Select if you want to book a <strong>Food Stall at Rs. 700 per day per stall</strong> on competition days.</p>
                             <!-- Static Checkbox list for dates -->
@@ -298,7 +298,7 @@
                                 If this is the <strong>first</strong> registration from your flat for <strong>event participation</strong> or <strong>hosting a food stall</strong>, select this option, make the payment and attach payment
                                 screenshot.
                             </p>
-                            <p id="totalCharge" style="color: red;">Total Amount to be paid: INR 0</p>
+                            <p id="totalCharge" style="color: #4b0082;">Total Amount to be paid: INR 0</p>
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="paymentOption" id="option1" value="I will pay for participation and/or food stall now." />
                                 <label class="form-check-label" for="option1">I will pay for participation and/or food stall now.</label>
@@ -315,13 +315,13 @@
                             </div>
                             <div class="dividerthin"></div>
                             <div class="mb-3">
-                                <p style="color: #a63a50;"><strong>(Preferred method) Pay via Anacity:</strong></p>
+                                <p style="color: #4b0082;"><strong>(Preferred method) Pay via Anacity:</strong></p>
                                 <ul class="bullet-points">
                                     <li>Go to "Z1 Apartments Facilities" account on the top left</li>
                                     <li>Select Dues => Pay advance => Paying to "Winterfest 2024"</li>
                                     <li>Pay amount mentioned</li>
                                 </ul>
-                                <p style="color: #a63a50;">
+                                <p style="color: #4b0082;">
                                     <strong>(Alternate method) Pay via UPI:</strong>
                                 </p>
                                 <p>
