--- a/index.html
+++ b/index.html
@@ -349,6 +349,14 @@
                             </div>
                             <button class="btn btn-primary" type="submit" onclick="validateAndSubmitForm(event)">Submit</button>
                         </section>
+                        <div id="registrationConfirmation" class="tab-pane fade">
+                            <h2>Registration Confirmation</h2>
+                            <p>Thank you! Your registration has been submitted.</p>
+                            <div class="dividerthin"></div>
+                            <p>Registration Id: <span id="registrationId">12345</span></p>
+                            &nbsp
+                            <button class="btn btn-primary" onclick="resetForm()">Submit a New Registration</button>
+                        </div>
                     </div>
                 </div>
                 <div id="dashboard" class="tab-pane fade">
@@ -482,7 +490,7 @@
                     formValid = false;
                 }
 
-                console.log(`File input length: ${v_paymentConfirmation.files.length}`);
+                //console.log(`File input length: ${v_paymentConfirmation.files.length}`);
                 if (v_paymentConfirmation.files && v_paymentConfirmation.files.length === 0) {
                     v_paymentConfirmation.classList.add(invalidInputClass);
                     formValid = false;
@@ -586,7 +594,7 @@
                 };
 
                 // Step 4: Send data using fetch with payload
-                fetch("https://script.google.com/macros/s/AKfycbxO7aibWSOj0Ky5fZV4NBG6Bv5zGFqe0R9rQm6X3G94DFPfGkDeEvG4PsqpFr7_dgL-zg/exec", {
+                fetch("https://script.google.com/macros/s/AKfycbzfppPlQZudT7du-UcYNQ3GMVxq0gSxu-TqksQ7b8kbCE-AHRTvJRmbRSRZDafsjqKoqg/exec", {
                     redirect: "follow",
                     mode: "no-cors",
                     method: "POST",
@@ -598,7 +606,9 @@
                     .then((response) => response.text())
                     .then((data) => {
                         console.log(data);
-                        alert("Form submitted successfully!");
+                        document.getElementById('newRegistration').style.display = 'none';  // Hide the form section
+                        document.getElementById('registrationConfirmation').style.display = 'block'; // Show the confirmation section
+                        document.getElementById('registrationId').textContent = 'Some ID from response'; // Set the registration id from the response
                     })
                     .catch((error) => {
                         console.error("Error:", error);
@@ -750,6 +760,12 @@
                         categoryElem.style.display = "block";
                     }
                 });
+            }
+
+            function resetForm() {
+                document.getElementById('registrationForm').reset(); // Reset the form
+                document.getElementById('newRegistration').style.display = 'block';  // Show the form section
+                document.getElementById('registrationConfirmation').style.display = 'none'; // Hide the confirmation section
             }
         </script>
         <!-- Bootstrap Bundle with Popper -->
