--- a/index.html
+++ b/index.html
@@ -594,9 +594,9 @@
                 };
 
                 // Step 4: Send data using fetch with payload
-                fetch("https://script.google.com/macros/s/AKfycbzfppPlQZudT7du-UcYNQ3GMVxq0gSxu-TqksQ7b8kbCE-AHRTvJRmbRSRZDafsjqKoqg/exec", {
+                fetch("https://script.google.com/macros/s/AKfycbzvA3iJ3GBQdeavAbiRyybXaCY-QRaE3WGETRjbwJ8X9rxCRNk2A7SmpNQPuUnqXv8UEg/exec", {
                     redirect: "follow",
-                    mode: "no-cors",
+                    mode: "cors",
                     method: "POST",
                     headers: {
                         "Content-Type": "text/plain;charset=utf-8",
