--- a/index.html
+++ b/index.html
@@ -594,12 +594,12 @@
                 };
 
                 // Step 4: Send data using fetch with payload
-                fetch("https://script.google.com/macros/s/AKfycbzvA3iJ3GBQdeavAbiRyybXaCY-QRaE3WGETRjbwJ8X9rxCRNk2A7SmpNQPuUnqXv8UEg/exec", {
+                fetch("https://script.google.com/macros/s/AKfycbzYUQTMAHwAFrlSpEhfRLhi5VWeLjW394GwdlscaQuiNgUgI93LImiExp4iR-UVp0ATGA/exec", {
                     redirect: "follow",
                     mode: "cors",
                     method: "POST",
                     headers: {
-                        "Content-Type": "text/plain;charset=utf-8",
+                        "Content-Type": "application/json",
                     },
                     body: JSON.stringify(registrationData),
                 })
