--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                         const formSection = document.getElementById('newRegistration');
                         const confirmationSection = document.getElementById('registrationConfirmation');
                 
-                        if(formSection && confirmationSection && registrationIdSpan) {
+                        if(formSection && confirmationSection) {
                             formSection.style.display = 'none';
                             confirmationSection.style.display = 'block';
                         } else {
