--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                             <div class="section-header">
                                 <h2>Final Submission</h2>
                             </div>
-                            <button class="btn btn-primary" type="submit">Submit</button>
+                            <button id="submitBtn" class="btn btn-primary" type="submit">Submit</button>
                         </section>
                     </div>
                 </div>
