--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             .category-header { font-size: 20px; font-weight: bold; color: #333; }
             .bullet-points { list-style: none; padding-left: 20px; }
             .bullet-points li:before { content: "\2022"; color: black; font-weight: bold; display: inline-block; width: 1em; margin-left: -1em; }
+            .modal { display: none; position: fixed; z-index: 1; left: 0; top: 0; width: 100%; height: 100%; overflow: auto; background-color: rgba(0,0,0,0.4); }
+            .modal-content { background-color: #fefefe; margin: 15% auto; padding: 20px; border: 1px solid #888; width: 80%; }
+            .close { color: #aaa; float: right; font-size: 28px; font-weight: bold; }
+            .close:hover,
+            .close:focus { color: black; text-decoration: none; cursor: pointer; }
         </style>
     </head>
     <body>
