--- a/index.html
+++ b/index.html
@@ -373,6 +373,8 @@
           <div class="modal-content">
             <span class="close">&times;</span>
             <p>Thank you! Your registration has been submitted successfully.</p>
+            <img src="thankyou.png" alt="Thank you" class="img-fluid" />
+            &nbsp
             <div class="dividerthin"></div>
             <button id="newRegistrationBtn" class="btn">Submit New Registration</button> 
           </div>
